--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/shannonarcher/garrulous-egg/issues"
   },
-  "homepage": "https://github.com/shannonarcher/garrulous-egg#readme"
+  "homepage": "https://github.com/shannonarcher/garrulous-egg#readme",
+  "dependencies": {
+    "seedrandom": "^3.0.1"
+  }
 }
