--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.11.0",
     "md5": "^2.2.1",
     "morgan": "~1.9.0",
+    "seedrandom": "^3.0.1",
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
