--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dg:3": "node ./data/workers/03-grade-levels.js",
     "dg:4": "node ./data/workers/04-curate-levels.js",
     "dg:5": "node ./data/workers/05-generate-best-seed.js",
-    "migrate": ""
+    "migrate": "node ./migrations/migrate.js",
+    "migrate:refresh": "node ./migrations/migrate.js --refresh=true"
   },
   "dependencies": {
     "beepbeep": "^1.2.2",
@@ -22,6 +23,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "md5": "^2.2.1",
+    "minimist": "^1.2.0",
     "mongoose": "^5.5.2",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.11",
